# claude-kube

./: .env.example  .gitignore  README.md  pyproject.toml
claude_proxy/: __init__.py  adapter.py  app.py  config.py  main.py
config/: models.example.yaml  models.yaml
docs/: reasoning-validation.md
tests/: test_adapter.py  test_app.py  test_claude_code_e2e.py  test_config.py  test_openrouter_gateway_smoke.py  test_openrouter_smoke.py
